syntax = "proto3";

package custom.common;

import "google/protobuf/descriptor.proto";
import "custom/common/authz.proto";

option go_package = "github.com/tenz-io/gokit/genproto/go/custom/common;common";


message RequestHeader {
  Role role = 1;
  int64 userid = 2;
  string request_id = 3;
  string session_id = 4;
  string request_flag = 5;
}

message ResponseHeader {
  int32 code = 1;
  string err_msg = 2;
  repeated string debug_infos = 3;
}